--- a/farm/index.html
+++ b/farm/index.html
@@ -2,8 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="description" content="Farm E-Commerce Platform - Buy and Sell Fresh Produce Directly from Farmers">
+    <meta property="og:title" content="Farm Project - Buy Fresh, Support Farmers">
+    <meta property="og:description" content="A direct-to-customer agricultural marketplace">
+    <meta property="og:type" content="website">
     <title>Farm Project</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 20px;
+            background-color: #f8f8f8;
+        }
+        h1 {
+            color: #2c7a2c;
+        }
+        p {
+            color: #333;
+        }
+    </style>
 </head>
 <body>
     <h1>Welcome to the Farm E-Commerce Platform</h1>
